Fixed bug regarding footer z-index, changed home page text and added some more

--- a/style.css
+++ b/style.css
@@ -617,7 +617,7 @@ audio {
   font-size: 15px;
   background-color: MediumSeaGreen;
   color: white;
-  z-index: 99;
+  z-index: 0;
   font-family: 'Merriweather', serif;
 }
 
